--- a/index.html
+++ b/index.html
@@ -45,66 +45,7 @@
         </header>
         <div class="foods-contener">
             <div class="foods-box">
-                <!-- <div id="1-food" class="food">
-                    <div class="food-image">
-                        <img src="images/foody-upload-api-foody-mobile-10-200317093749.jpg" alt="">
-                    </div>
-                    <div class="food-info">
-                        <h1 class="food-name">hamburger</h1>
-                        <p class="food-description">repellat praesentium dolore repudiandae, non</p>
-                        <h2>Price</h2>
-                        <p class="food-price">455 Fcfa</p>
-                        <div class="food-level-star">
-                            <span class="food-level"><img src="icon_star.svg" alt=""></span>
-                            <button type="button" id="add-food">+</button>
-                        </div>
-                    </div>
-                </div>
-                <div id="1-food" class="food">
-                    <div class="food-image">
-                        <img src="images/foody-upload-api-foody-mobile-10-200317093749.jpg" alt="">
-                    </div>
-                    <div class="food-info">
-                        <h1 class="food-name">hamburger</h1>
-                        <p class="food-description">repellat praesentium dolore repudiandae, non</p>
-                        <h2>Price</h2>
-                        <p class="food-price">455 Fcfa</p>
-                        <div class="food-level-star">
-                            <span class="food-level"><img src="icon_star.svg" alt=""></span>
-                            <button type="button" id="add-food">+</button>
-                        </div>
-                    </div>
-                </div>
-                <div id="1-food" class="food">
-                    <div class="food-image">
-                        <img src="images/foody-upload-api-foody-mobile-10-200317093749.jpg" alt="">
-                    </div>
-                    <div class="food-info">
-                        <h1 class="food-name">hamburger</h1>
-                        <p class="food-description">repellat praesentium dolore repudiandae, non</p>
-                        <h2>Price</h2>
-                        <p class="food-price">455 Fcfa</p>
-                        <div class="food-level-star">
-                            <span class="food-level"><img src="icon_star.svg" alt=""></span>
-                            <button type="button" id="add-food">+</button>
-                        </div>
-                    </div>
-                </div>
-                <div id="1-food" class="food">
-                    <div class="food-image">
-                        <img src="images/foody-upload-api-foody-mobile-10-200317093749.jpg" alt="">
-                    </div>
-                    <div class="food-info">
-                        <h1 class="food-name">hamburger</h1>
-                        <p class="food-description">repellat praesentium dolore repudiandae, non</p>
-                        <h2>Price</h2>
-                        <p class="food-price">455 Fcfa</p>
-                        <div class="food-level-star">
-                            <span class="food-level"><img src="icon_star.svg" alt=""></span>
-                            <button type="button" id="add-food">+</button>
-                        </div>
-                    </div>
-                </div> -->
+ -->
             </div>
         </div>
         <div id="my-cart" class="my-cart toggle">
@@ -126,8 +67,8 @@
                     </div>
                     <div class="table">
                         <table>
-                            <tbody>
-                                <tr>
+                            <tbody class="t-body">
+                                <!-- <tr>
                                     <td>
                                         <div id="1-food" class="order-item">
                                             <div class="order-food-image">
@@ -148,73 +89,7 @@
                                     <td>
                                         <button type="button" id="remove-order">X</button>
                                     </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <div id="1-food" class="order-item">
-                                            <div class="order-food-image">
-                                                <img src="images/foody-upload-api-foody-mobile-10-200317093749.jpg" alt="">
-                                            </div>
-                                            <div class="order-food-info">
-                                                <h1 class="order-food-name">hamburger</h1>
-                                                <p class="order-food-description">repellat praesentium dolore repudiandae, non</p>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <input type="number" name="Quantity" id="quality" max="4" step="1">
-                                    </td>
-                                    <td>
-                                        <p class="order-food-price">455 Fcfa</p>
-                                    </td>
-                                    <td>
-                                        <button type="button" id="remove-order">X</button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <div id="1-food" class="order-item">
-                                            <div class="order-food-image">
-                                                <img src="images/foody-upload-api-foody-mobile-10-200317093749.jpg" alt="">
-                                            </div>
-                                            <div class="order-food-info">
-                                                <h1 class="order-food-name">hamburger</h1>
-                                                <p class="order-food-description">repellat praesentium dolore repudiandae, non</p>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <input type="number" name="Quantity" id="quality" max="4" step="1">
-                                    </td>
-                                    <td>
-                                        <p class="order-food-price">455 Fcfa</p>
-                                    </td>
-                                    <td>
-                                        <button type="button" id="remove-order">X</button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <div id="1-food" class="order-item">
-                                            <div class="order-food-image">
-                                                <img src="images/foody-upload-api-foody-mobile-10-200317093749.jpg" alt="">
-                                            </div>
-                                            <div class="order-food-info">
-                                                <h1 class="order-food-name">hamburger</h1>
-                                                <p class="order-food-description">repellat praesentium dolore repudiandae, non</p>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <input type="number" name="Quantity" id="quality" max="4" step="1">
-                                    </td>
-                                    <td>
-                                        <p class="order-food-price">455 Fcfa</p>
-                                    </td>
-                                    <td>
-                                        <button type="button" id="remove-order">X</button>
-                                    </td>
-                                </tr>
+                                </tr> -->
                             </tbody>
     
                     </table>
