'Calculate-commande-total'

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <nav>
                     <ul class="menu-items">
                         <li><a href="#home" class="active home">Home</a></li>
-                        <li><a href="#cart" id="cart" class="link">Cart</a><span class="item-count">7</span></li>
+                        <li><a href="#cart" id="cart" class="link">Cart</a><span class="item-count">0</span></li>
                         <li><a href="#contact" id="contact">Contact</a></li>
                         <li><a href="#login" id="login" class="link">Login</a></li>
                         <li class="user"><a href="#">User</a> 
@@ -96,7 +96,7 @@
                     </div>
                     <div class="tfoot">  
                         <div>Total :</div>
-                        <div colspan="3"><span class="order-total">555555 Fcfa</span></div>
+                        <div colspan="3"><span class="order-total">0</span> Fcfa</span></div>
                         <button id="payement" class="payement my-payement">Payement</button>    
                 </div>
                 </div>
