--- a/dashbord.html
+++ b/dashbord.html
@@ -218,13 +218,14 @@
 
         </div>
     </div>
-    <div class="confirm-action box">
+    <div class="confirm-action box hidden">
         <div class="action-over">
 
         </div>
 
         <div class="action-message"></div>
-        <button id ="btn-annuler" class="btn-form btn-annuler-ajout">Annuler</button><button id="btn-valider" class="btn-form btn-valider-add">Valider</button>
+        <button id ="btn-annuler" class="btn-form btn-confirm">Annuler</button>
+        <button id="btn-valider" class="btn-form btn-confirm">Valider</button>
     </div>
     <script src="scripts/admin.js" type="module"></script>
 </body>
