--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@
                             </form>
                         </div>
                         <form action="" id="fsingup" class="fsingup hidden">
-                            <label for="user-name">Username :</label><br>
-                            <input type="text" name="user-name" id="user-name"><br>
+                            <label for="username">Username :</label><br>
+                            <input type="text" name="user-name" id="username"><br>
                             <label for="user-password">Password:</label><br>
                             <input type="password" name="user-password" id="user-password"><br>
-                            <label for="verif-password">Confirm Password:</label><br>
-                            <input type="password" name="verif-password" id="verif-password"><br>
+                            <label for="repassword">Confirm Password:</label><br>
+                            <input type="password" name="repassword" id="repassword"><br>
                             <input type="submit" value="S'inscrire" id="inscrire" class="valider">
                         </form>
                     </div>
